--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.4",
+        "php": "^8.3",
         "laravel/framework": "^12.0",
         "laravel/reverb": "^1.0",
         "laravel/sanctum": "^4.1",
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.10.1",
         "mcamara/laravel-localization": "^2.3",
         "moneyphp/money": "^4.7",
+        "predis/predis": "^3.0",
         "propaganistas/laravel-phone": "^6.0",
         "spatie/laravel-permission": "^6.20",
         "spatie/laravel-sluggable": "^3.7",
