--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     },
     "dependencies": {
         "alpinejs": "^3.14.9",
-        "vue": "^3.5.17"
+        "swiper": "^11.2.10",
+        "vue": "^3.5.17",
+        "vue-i18n": "^9.14.5"
     }
 }
