--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.7.23",
+        "@heroicons/vue": "^2.2.0",
         "alpinejs": "^3.14.9",
+        "js-cookie": "^3.0.5",
         "swiper": "^11.2.10",
         "vue": "^3.5.17",
         "vue-i18n": "^9.14.5"
