added some composer packages, api routes, slug for size & colors, cart functionality.

--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
         "laravel/sanctum": "^4.1",
         "laravel/scout": "^10.16",
         "laravel/tinker": "^2.10.1",
+        "lukepolo/laracart": "^2.6",
         "mcamara/laravel-localization": "^2.3",
         "moneyphp/money": "^4.7",
-        "predis/predis": "^3.0",
         "propaganistas/laravel-phone": "^6.0",
         "spatie/laravel-permission": "^6.20",
         "spatie/laravel-sluggable": "^3.7",
