--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,18 @@ APP_NAME=kidd.
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=https://localhost
+APP_URL=https://kidd.test
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+DEBUGBAR_ENABLED=false
+
+ROUTER_API_URL=api.kidd.test
+ROUTER_SHOP_URL=kidd.test
+ROUTER_ADMIN_URL=cp.kidd.test
+ASSET_URL=
+
+APP_LOCALE=ro
+APP_FALLBACK_LOCALE=ro
+APP_FAKER_LOCALE=ro_RO
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
@@ -20,24 +27,25 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=127.0.0.1
+DB_PORT=5432
+DB_DATABASE=kidd
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
 
-SESSION_DRIVER=database
-SESSION_LIFETIME=120
-SESSION_ENCRYPT=false
-SESSION_PATH=/
-SESSION_DOMAIN=null
+SESSION_DRIVER=redis
+SESSION_LIFETIME=1440
+SESSION_DOMAIN=.kidd.test
 
-BROADCAST_CONNECTION=log
+SANCTUM_STATEFUL_DOMAINS=null
+
+BROADCAST_DRIVER=reverb
+BROADCAST_CONNECTION=reverb
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=redis
 
-CACHE_STORE=database
+CACHE_STORE=redis
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
@@ -47,17 +55,22 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
+# Looking to send emails in production? Check out our Email API/SMTP product!
+MAIL_MAILER=smtp
+MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=
+MAIL_PASSWORD=
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
+REVERB_APP_ID=399961
+REVERB_APP_KEY=bmurinfn58kbxlt8gifo
+REVERB_APP_SECRET=9yxqx5cethjtuxycq9dw
+REVERB_HOST="${ROUTER_SHOP_URL}"
+REVERB_PORT=8080
+REVERB_SCHEME=https
 
+VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
+VITE_REVERB_HOST="${REVERB_HOST}"
+VITE_REVERB_PORT="${REVERB_PORT}"
+VITE_REVERB_SCHEME="${REVERB_SCHEME}"
 VITE_APP_NAME="${APP_NAME}"
