--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "propaganistas/laravel-phone": "^6.0",
         "spatie/laravel-permission": "^6.20",
         "spatie/laravel-sluggable": "^3.7",
-        "spatie/laravel-translatable": "^6.11"
+        "spatie/laravel-translatable": "^6.11",
+        "tightenco/ziggy": "^2.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -59,6 +60,7 @@
         ],
         "dev": [
             "Composer\\Config::disableProcessTimeout",
+            "@php artisan ziggy:generate --ansi",
             "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite"
         ],
         "test": [
