--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "dependencies": {
         "@headlessui/vue": "^1.7.23",
         "@heroicons/vue": "^2.2.0",
+        "@tailwindcss/aspect-ratio": "^0.4.2",
+        "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/typography": "^0.5.16",
         "alpinejs": "^3.14.9",
         "js-cookie": "^3.0.5",
         "swiper": "^11.2.10",
