--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     },
     "devDependencies": {
         "@laravel/echo-vue": "^2.1.6",
+        "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/postcss": "^4.1.11",
         "@tailwindcss/vite": "^4.1.11",
         "@vitejs/plugin-vue": "^6.0.0",
         "autoprefixer": "^10.4.21",
@@ -25,12 +27,12 @@
         "@headlessui/vue": "^1.7.23",
         "@heroicons/vue": "^2.2.0",
         "@tailwindcss/aspect-ratio": "^0.4.2",
-        "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/typography": "^0.5.16",
         "alpinejs": "^3.14.9",
         "js-cookie": "^3.0.5",
         "swiper": "^11.2.10",
         "vue": "^3.5.17",
-        "vue-i18n": "^9.14.5"
+        "vue-i18n": "^9.14.5",
+        "vue-router": "^4.5.1"
     }
 }
