--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@tailwindcss/aspect-ratio": "^0.4.2",
         "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/typography": "^0.5.16",
+        "@tailwindplus/elements": "^1.0.0",
         "alpinejs": "^3.14.9",
         "js-cookie": "^3.0.5",
         "swiper": "^11.2.10",
