Integrate `Cart` component into views with Vue data bindings, refactor `profile.blade.php` to use `x-ui.input-label` for cleaner markup, and add event bus using `mitt` for cart updates synchronization. Include new SVG assets and refine checkbox UI styles for improved design consistency.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "alpinejs": "^3.14.9",
         "js-cookie": "^3.0.5",
         "lodash": "^4.17.21",
+        "mitt": "^3.0.1",
         "sweetalert2": "^11.22.2",
         "swiper": "^11.2.10",
         "vue": "^3.5.17",
