Added some checkout preparations

--- a/.env.example
+++ b/.env.example
@@ -2,14 +2,14 @@ APP_NAME=kidd.
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=https://kidd.test
 
-DEBUGBAR_ENABLED=false
+APP_URL=https://kidd.test
+VITE_API_URL=https://api.kidd.test/v1
 
 ROUTER_API_URL=api.kidd.test
 ROUTER_SHOP_URL=kidd.test
 ROUTER_ADMIN_URL=cp.kidd.test
-ASSET_URL=
+
 
 APP_LOCALE=ro
 APP_FALLBACK_LOCALE=ro
