Sync favorites with server, api & views.

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "spatie/laravel-medialibrary": "^11.13",
         "spatie/laravel-permission": "^6.20",
         "spatie/laravel-sluggable": "^3.7",
+        "spatie/laravel-tags": "^4.10",
         "spatie/laravel-translatable": "^6.11",
         "tightenco/ziggy": "^2.5"
     },
