--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@tailwindplus/elements": "^1.0.0",
         "alpinejs": "^3.14.9",
         "js-cookie": "^3.0.5",
+        "laravel-precognition-vue": "^0.7.2",
         "lodash": "^4.17.21",
         "mitt": "^3.0.1",
         "sweetalert2": "^11.22.2",
