--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
         "laravel-echo": "^2.1.6",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.5.6",
+        "prettier": "^3.6.2",
+        "prettier-plugin-blade": "^2.1.21",
+        "prettier-plugin-tailwindcss": "^0.6.14",
         "pusher-js": "^8.4.0",
         "tailwindcss": "^4.1.11",
         "vite": "^6.2.4"
@@ -31,6 +34,7 @@
         "@tailwindplus/elements": "^1.0.0",
         "alpinejs": "^3.14.9",
         "js-cookie": "^3.0.5",
+        "laravel-precognition-alpine": "^0.7.2",
         "laravel-precognition-vue": "^0.7.2",
         "lodash": "^4.17.21",
         "mitt": "^3.0.1",
